manifests/redis/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        args:
        - "/usr/local/bin/redis-server"
        - "--appendonly"
        - "yes"
        - "--requirepass"
        - "$(REDIS_PASSWD)"
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: 100Mi
            cpu: 200m
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
